머스테치로 기본 페이지를 만들고, controller로 진행함.
덧붙여 잘 출력되는지 localhost:8080으로 접속해서 확인하였다.

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    // Mustache
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
+
     // security
     implementation 'org.springframework.boot:spring-boot-starter-security'
 //	implementation 'org.springframework.security:spring-security-test'
