--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.jpa.show_sql=true
 spring.h2.console.enabled=true
+
+# HTTP ??? ???? ??? ???(UTF-8)? ??? ???? ????? ????? ??
+server.servlet.encoding.force-response=true
