--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.h2.console.enabled=true
 
 server.servlet.encoding.force-response=true
 spring.profiles.include=oauth
+spring.session.store-type=jdbc
